<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etTextNum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="number 1"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etTextNum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="number 2"
        app:layout_constraintTop_toBottomOf="@+id/etTextNum1" />


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:text="Hello World!"
        android:textAlignment="center"
        android:visibility="gone"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/etTextNum2" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdd"
        android:text="+"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"/>


    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnSub"
        android:text="-"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnDiv"
        android:text="/"
        app:layout_constraintTop_toBottomOf="@+id/btnSub"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnMult"
        android:text="*"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>